--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 <h1>QtWebAssemblyExample</h1>
-<h3><a href="WebText/WebText.html">WebText</a></h3>
+<h2><a href="WebTest/WebTest.html">WebTest</a></h2>
